@@ -6,12 +6,11 @@ import de.focus_shift.jollyday.core.parser.functions.CreateHoliday;
 import de.focus_shift.jollyday.core.parser.functions.FixedToLocalDate;
 import de.focus_shift.jollyday.core.parser.functions.MoveDateRelative;
 import de.focus_shift.jollyday.core.parser.predicates.ValidLimitation;
-import de.focus_shift.jollyday.core.spi.Holidays;
+import de.focus_shift.jollyday.core.spi.HolidayConfigurations;
 
+import java.time.LocalDate;
 import java.time.Year;
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 /**
  * The Class FixedParser. Parses a fixed date to create a Holiday.
@@ -19,11 +18,15 @@ import static java.util.stream.Collectors.toList;
 public class FixedParser implements HolidayParser {
 
   @Override
-  public List<Holiday> parse(final Year year, final Holidays holidays) {
+  public List<Holiday> parse(final Year year, final HolidayConfigurations holidays) {
     return holidays.fixed().stream()
       .filter(new ValidLimitation(year))
-      .map(fixed -> new DescribedDateHolder(fixed, new MoveDateRelative(new FixedToLocalDate(year).apply(fixed)).apply(fixed)))
-      .map(describedDateHolder -> new CreateHoliday(describedDateHolder.getDate()).apply(describedDateHolder.getDescribed()))
-      .collect(toList());
+      .map(fixedConfiguration -> {
+        final LocalDate actualDate = new FixedToLocalDate(year).apply(fixedConfiguration);
+        final LocalDate observedDate = new MoveDateRelative(actualDate).apply(fixedConfiguration).orElse(null);
+        return new DescribedDateHolder(fixedConfiguration, actualDate, observedDate);
+      })
+      .map(describedDateHolder -> new CreateHoliday(describedDateHolder.getActualDate(), describedDateHolder.getObservedDate()).apply(describedDateHolder.getDescribed()))
+      .toList();
   }
 }
