@@ -6,12 +6,10 @@ import de.focus_shift.jollyday.core.parser.functions.CreateHoliday;
 import de.focus_shift.jollyday.core.parser.functions.FindWeekDayBetween;
 import de.focus_shift.jollyday.core.parser.functions.FixedToLocalDate;
 import de.focus_shift.jollyday.core.parser.predicates.ValidLimitation;
-import de.focus_shift.jollyday.core.spi.Holidays;
+import de.focus_shift.jollyday.core.spi.HolidayConfigurations;
 
 import java.time.Year;
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 /**
  * Parses the configuration for fixed weekdays between two fixed dates.
@@ -19,7 +17,7 @@ import static java.util.stream.Collectors.toList;
 public class FixedWeekdayBetweenFixedParser implements HolidayParser {
 
   @Override
-  public List<Holiday> parse(final Year year, final Holidays holidays) {
+  public List<Holiday> parse(final Year year, final HolidayConfigurations holidays) {
     return holidays.fixedWeekdayBetweenFixed().stream()
       .filter(new ValidLimitation(year))
       .map(fwm -> new DescribedDateHolder(fwm,
@@ -29,7 +27,7 @@ public class FixedWeekdayBetweenFixedParser implements HolidayParser {
           ).apply(fwm)
         )
       )
-      .map(holder -> new CreateHoliday(holder.getDate()).apply(holder.getDescribed()))
-      .collect(toList());
+      .map(holder -> new CreateHoliday(holder.getActualDate()).apply(holder.getDescribed()))
+      .toList();
   }
 }
