@@ -5,12 +5,10 @@ import de.focus_shift.jollyday.core.parser.HolidayParser;
 import de.focus_shift.jollyday.core.parser.functions.CreateHoliday;
 import de.focus_shift.jollyday.core.parser.functions.FindWeekDayInMonth;
 import de.focus_shift.jollyday.core.parser.predicates.ValidLimitation;
-import de.focus_shift.jollyday.core.spi.Holidays;
+import de.focus_shift.jollyday.core.spi.HolidayConfigurations;
 
 import java.time.Year;
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 /**
  * The Class FixedWeekdayInMonthParser.
@@ -18,11 +16,11 @@ import static java.util.stream.Collectors.toList;
 public class FixedWeekdayInMonthParser implements HolidayParser {
 
   @Override
-  public List<Holiday> parse(final Year year, final Holidays holidays) {
+  public List<Holiday> parse(final Year year, final HolidayConfigurations holidays) {
     return holidays.fixedWeekdays().stream()
       .filter(new ValidLimitation(year))
       .map(fwm -> new DescribedDateHolder(fwm, new FindWeekDayInMonth(year).apply(fwm)))
-      .map(holder -> new CreateHoliday(holder.getDate()).apply(holder.getDescribed()))
-      .collect(toList());
+      .map(holder -> new CreateHoliday(holder.getActualDate()).apply(holder.getDescribed()))
+      .toList();
   }
 }
