@@ -6,12 +6,10 @@ import de.focus_shift.jollyday.core.parser.functions.CreateHoliday;
 import de.focus_shift.jollyday.core.parser.functions.FindWeekDayRelativeToDate;
 import de.focus_shift.jollyday.core.parser.functions.FixedToLocalDate;
 import de.focus_shift.jollyday.core.parser.predicates.ValidLimitation;
-import de.focus_shift.jollyday.core.spi.Holidays;
+import de.focus_shift.jollyday.core.spi.HolidayConfigurations;
 
 import java.time.Year;
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 /**
  * Parses fixed weekday relative to fixed date.
@@ -19,7 +17,7 @@ import static java.util.stream.Collectors.toList;
 public class FixedWeekdayRelativeToFixedParser implements HolidayParser {
 
   @Override
-  public List<Holiday> parse(final Year year, final Holidays holidays) {
+  public List<Holiday> parse(final Year year, final HolidayConfigurations holidays) {
     return holidays.fixedWeekdayRelativeToFixed().stream()
       .filter(new ValidLimitation(year))
       .map(weekdayRelativeToFixed ->
@@ -28,8 +26,8 @@ public class FixedWeekdayRelativeToFixedParser implements HolidayParser {
           new FindWeekDayRelativeToDate(new FixedToLocalDate(year).apply(weekdayRelativeToFixed.day())).apply(weekdayRelativeToFixed)
         )
       )
-      .map(holder -> new CreateHoliday(holder.getDate()).apply(holder.getDescribed()))
-      .collect(toList());
+      .map(holder -> new CreateHoliday(holder.getActualDate()).apply(holder.getDescribed()))
+      .toList();
   }
 }
 
