@@ -1,29 +1,28 @@
 package de.focus_shift.jollyday.jaxb;
 
-import de.focus_shift.jollyday.core.spi.ChristianHoliday;
-import de.focus_shift.jollyday.core.spi.EthiopianOrthodoxHoliday;
-import de.focus_shift.jollyday.core.spi.Fixed;
-import de.focus_shift.jollyday.core.spi.FixedWeekdayBetweenFixed;
-import de.focus_shift.jollyday.core.spi.FixedWeekdayInMonth;
-import de.focus_shift.jollyday.core.spi.FixedWeekdayRelativeToFixed;
-import de.focus_shift.jollyday.core.spi.Holidays;
-import de.focus_shift.jollyday.core.spi.IslamicHoliday;
-import de.focus_shift.jollyday.core.spi.RelativeToEasterSunday;
-import de.focus_shift.jollyday.core.spi.RelativeToFixed;
-import de.focus_shift.jollyday.core.spi.RelativeToWeekdayInMonth;
+import de.focus_shift.jollyday.core.spi.ChristianHolidayConfiguration;
+import de.focus_shift.jollyday.core.spi.EthiopianOrthodoxHolidayConfiguration;
+import de.focus_shift.jollyday.core.spi.FixedHolidayConfiguration;
+import de.focus_shift.jollyday.core.spi.FixedWeekdayBetweenFixedHolidayConfiguration;
+import de.focus_shift.jollyday.core.spi.FixedWeekdayInMonthHolidayConfiguration;
+import de.focus_shift.jollyday.core.spi.FixedWeekdayRelativeToFixedHolidayConfiguration;
+import de.focus_shift.jollyday.core.spi.HolidayConfigurations;
+import de.focus_shift.jollyday.core.spi.IslamicHolidayConfiguration;
+import de.focus_shift.jollyday.core.spi.RelativeToEasterSundayHolidayConfiguration;
+import de.focus_shift.jollyday.core.spi.RelativeToFixedHolidayConfiguration;
+import de.focus_shift.jollyday.core.spi.RelativeToWeekdayInMonthHolidayConfiguration;
+import de.focus_shift.jollyday.jaxb.mapping.Holidays;
 
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 /**
- * see {@link Holidays}
+ * see {@link HolidayConfigurations}
  */
-public class JaxbHolidays implements Holidays {
+public class JaxbHolidays implements HolidayConfigurations {
 
-  private final de.focus_shift.jollyday.jaxb.mapping.Holidays holidays;
+  private final Holidays holidays;
 
-  public JaxbHolidays(de.focus_shift.jollyday.jaxb.mapping.Holidays holidays) {
+  public JaxbHolidays(Holidays holidays) {
     this.holidays = holidays;
   }
 
@@ -33,8 +32,11 @@ public class JaxbHolidays implements Holidays {
    * @return {@inheritDoc}
    */
   @Override
-  public List<Fixed> fixed() {
-    return holidays.getFixed().stream().map(JaxbFixed::new).collect(toList());
+  public List<FixedHolidayConfiguration> fixed() {
+    return holidays.getFixed().stream()
+      .map(JaxbFixed::new)
+      .map(FixedHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -43,8 +45,11 @@ public class JaxbHolidays implements Holidays {
    * @return {@inheritDoc}
    */
   @Override
-  public List<RelativeToFixed> relativeToFixed() {
-    return holidays.getRelativeToFixed().stream().map(JaxbRelativeToFixed::new).collect(toList());
+  public List<RelativeToFixedHolidayConfiguration> relativeToFixed() {
+    return holidays.getRelativeToFixed().stream()
+      .map(JaxbRelativeToFixed::new)
+      .map(RelativeToFixedHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -53,8 +58,11 @@ public class JaxbHolidays implements Holidays {
    * @return {@inheritDoc}
    */
   @Override
-  public List<RelativeToWeekdayInMonth> relativeToWeekdayInMonth() {
-    return holidays.getRelativeToWeekdayInMonth().stream().map(JaxbRelativeToWeekdayInMonth::new).collect(toList());
+  public List<RelativeToWeekdayInMonthHolidayConfiguration> relativeToWeekdayInMonth() {
+    return holidays.getRelativeToWeekdayInMonth().stream()
+      .map(JaxbRelativeToWeekdayInMonth::new)
+      .map(RelativeToWeekdayInMonthHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -63,8 +71,11 @@ public class JaxbHolidays implements Holidays {
    * @return {@inheritDoc}
    */
   @Override
-  public List<FixedWeekdayInMonth> fixedWeekdays() {
-    return holidays.getFixedWeekday().stream().map(JaxbFixedWeekdayInMonth::new).collect(toList());
+  public List<FixedWeekdayInMonthHolidayConfiguration> fixedWeekdays() {
+    return holidays.getFixedWeekday().stream()
+      .map(JaxbFixedWeekdayInMonth::new)
+      .map(FixedWeekdayInMonthHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -73,8 +84,11 @@ public class JaxbHolidays implements Holidays {
    * @return {@inheritDoc}
    */
   @Override
-  public List<ChristianHoliday> christianHolidays() {
-    return holidays.getChristianHoliday().stream().map(JaxbChristianHoliday::new).collect(toList());
+  public List<ChristianHolidayConfiguration> christianHolidays() {
+    return holidays.getChristianHoliday().stream()
+      .map(JaxbChristianHoliday::new)
+      .map(ChristianHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -83,8 +97,11 @@ public class JaxbHolidays implements Holidays {
    * @return {@inheritDoc}
    */
   @Override
-  public List<IslamicHoliday> islamicHolidays() {
-    return holidays.getIslamicHoliday().stream().map(JaxbIslamicHoliday::new).collect(toList());
+  public List<IslamicHolidayConfiguration> islamicHolidays() {
+    return holidays.getIslamicHoliday().stream()
+      .map(JaxbIslamicHoliday::new)
+      .map(IslamicHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -93,8 +110,11 @@ public class JaxbHolidays implements Holidays {
    * @return {@inheritDoc}
    */
   @Override
-  public List<FixedWeekdayBetweenFixed> fixedWeekdayBetweenFixed() {
-    return holidays.getFixedWeekdayBetweenFixed().stream().map(JaxbFixedWeekdayBetweenFixed::new).collect(toList());
+  public List<FixedWeekdayBetweenFixedHolidayConfiguration> fixedWeekdayBetweenFixed() {
+    return holidays.getFixedWeekdayBetweenFixed().stream()
+      .map(JaxbFixedWeekdayBetweenFixed::new)
+      .map(FixedWeekdayBetweenFixedHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -103,8 +123,11 @@ public class JaxbHolidays implements Holidays {
    * @return {@inheritDoc}
    */
   @Override
-  public List<FixedWeekdayRelativeToFixed> fixedWeekdayRelativeToFixed() {
-    return holidays.getFixedWeekdayRelativeToFixed().stream().map(JaxbFixedWeekdayRelativeToFixed::new).collect(toList());
+  public List<FixedWeekdayRelativeToFixedHolidayConfiguration> fixedWeekdayRelativeToFixed() {
+    return holidays.getFixedWeekdayRelativeToFixed().stream()
+      .map(JaxbFixedWeekdayRelativeToFixed::new)
+      .map(FixedWeekdayRelativeToFixedHolidayConfiguration.class::cast)
+      .toList();
   }
 
   /**
@@ -113,12 +136,18 @@ public class JaxbHolidays implements Holidays {
    * @return {@inheritDoc}
    */
   @Override
-  public List<EthiopianOrthodoxHoliday> ethiopianOrthodoxHolidays() {
-    return holidays.getEthiopianOrthodoxHoliday().stream().map(JaxbEthiopianOrthodoxHoliday::new).collect(toList());
+  public List<EthiopianOrthodoxHolidayConfiguration> ethiopianOrthodoxHolidays() {
+    return holidays.getEthiopianOrthodoxHoliday().stream()
+      .map(JaxbEthiopianOrthodoxHoliday::new)
+      .map(EthiopianOrthodoxHolidayConfiguration.class::cast)
+      .toList();
   }
 
   @Override
-  public List<RelativeToEasterSunday> relativeToEasterSunday() {
-    return holidays.getRelativeToEasterSunday().stream().map(JaxbRelativeToEasterSunday::new).collect(toList());
+  public List<RelativeToEasterSundayHolidayConfiguration> relativeToEasterSunday() {
+    return holidays.getRelativeToEasterSunday().stream()
+      .map(JaxbRelativeToEasterSunday::new)
+      .map(RelativeToEasterSundayHolidayConfiguration.class::cast)
+      .toList();
   }
 }
