@@ -1,21 +1,20 @@
 package de.focus_shift.jollyday.jaxb;
 
 import de.focus_shift.jollyday.core.HolidayType;
-import de.focus_shift.jollyday.core.spi.IslamicHoliday;
+import de.focus_shift.jollyday.core.spi.IslamicHolidayConfiguration;
+import de.focus_shift.jollyday.jaxb.mapping.IslamicHoliday;
 
 import java.time.Year;
 import java.util.List;
 
-import static java.util.stream.Collectors.toList;
-
 /**
- * see {@link IslamicHoliday}
+ * see {@link IslamicHolidayConfiguration}
  */
-class JaxbIslamicHoliday implements IslamicHoliday {
+class JaxbIslamicHoliday implements IslamicHolidayConfiguration {
 
-  private final de.focus_shift.jollyday.jaxb.mapping.IslamicHoliday islamicHoliday;
+  private final IslamicHoliday islamicHoliday;
 
-  JaxbIslamicHoliday(de.focus_shift.jollyday.jaxb.mapping.IslamicHoliday christianHoliday) {
+  JaxbIslamicHoliday(IslamicHoliday christianHoliday) {
     this.islamicHoliday = christianHoliday;
   }
 
@@ -36,7 +35,9 @@ class JaxbIslamicHoliday implements IslamicHoliday {
    */
   @Override
   public String descriptionPropertiesKey() {
-    return islamicHoliday.getDescriptionPropertiesKey();
+    return islamicHoliday.getDescriptionPropertiesKey() == null
+      ? descriptionPropertiesKeyPrefix() + descriptionPropertiesKeyPrefixSeparator() + type()
+      : islamicHoliday.getDescriptionPropertiesKey();
   }
 
   /**
@@ -96,6 +97,7 @@ class JaxbIslamicHoliday implements IslamicHoliday {
   public List<MovingCondition> conditions() {
     return islamicHoliday.getMovingCondition().stream()
       .map(JaxbMovingCondition::new)
-      .collect(toList());
+      .map(MovingCondition.class::cast)
+      .toList();
   }
 }
